--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/proxbook
+    url: jdbc:mariadb://localhost:3306/proxbook?rewriteBatchedStatements=true&profileSQL=true&maxQuerySizeToLog=12345
     username: admin
     password: admin
     driver-class-name: org.mariadb.jdbc.Driver
@@ -13,6 +13,10 @@ spring:
       hibernate:
         format_sql: true
         default_batch_fetch_size: 1000
+        jdbc:
+          batch_size: 100
+          order_inserts: true
+          order_updates: true
     open-in-view: false
 
 kakao:
