--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,6 @@ spring:
     database-platform: org.hibernate.dialect.MariaDBDialect
     hibernate:
       ddl-auto: update
-    show-sql: true
     properties:
       hibernate:
         format_sql: true
@@ -28,3 +27,6 @@ logging:
     org.hibernate.SQL: DEBUG
     com.proxbook.finder : DEBUG
     web: DEBUG
+
+shorten:
+  hostname: ${SHORTEN_HOSTNAME}
