--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,15 @@ spring:
           order_updates: true
     open-in-view: false
 
+  data:
+    elasticsearch:
+      repositories:
+        enabled: true
+
+  elasticsearch:
+    rest:
+      uris: localhost:9200
+
 kakao:
   api:
     key: ${KAKAO_REST_API_KEY}
