[fix] logstash mariadb driver

--- a/docker/logstash/pipeline/books.conf
+++ b/docker/logstash/pipeline/books.conf
@@ -3,7 +3,7 @@ input {
         port=>5004
     }
   jdbc {
-    jdbc_driver_library => "/usr/share/logstash/jar/mariadb-java-client-3.3.3.jar"
+    jdbc_driver_library => "/usr/share/logstash/jar/mariadb-java-client.jar"
     jdbc_driver_class => "org.mariadb.jdbc.Driver"
     jdbc_connection_string => "jdbc:mariadb://db:3306/proxbook"
     jdbc_user => "admin"
