[fix] logstash index templates
logstash의 multi pipeline에서 template가 하나만 적용되는 문제 해결

--- a/docker/logstash/pipeline/books.conf
+++ b/docker/logstash/pipeline/books.conf
@@ -20,6 +20,8 @@ output {
   elasticsearch {
       hosts => ["http://es:9200"]
       index => "books"
+      manage_template => true
+      template_name  => books_template
       template =>"/usr/share/logstash/template/books_template.json"
   }
   stdout {
