--- a/docker/logstash/pipeline/libraries.conf
+++ b/docker/logstash/pipeline/libraries.conf
@@ -20,6 +20,8 @@ output {
   elasticsearch {
       hosts => ["http://es:9200"]
       index => "libraries"
+    manage_template => true
+    template_name  => libraries_template
       template =>"/usr/share/logstash/template/libraries_template.json"
   }
   stdout {
