[feat] library book search by elasticsearch

--- a/docker/logstash/config/pipelines.yml
+++ b/docker/logstash/config/pipelines.yml
@@ -6,3 +6,6 @@
   path.config: "/usr/share/logstash/pipeline/books.conf"
   pipeline.workers: 1
 
+- pipeline.id: library_books
+  path.config: "/usr/share/logstash/pipeline/library_books.conf"
+  pipeline.workers: 1
