--- a/docker/logstash/pipeline/library_books.conf
+++ b/docker/logstash/pipeline/library_books.conf
@@ -8,22 +8,21 @@ input {
     jdbc_connection_string => "jdbc:mariadb://db:3306/proxbook"
     jdbc_user => "admin"
     jdbc_password =>"admin"
-    statement => "SELECT * FROM libraries"
+    statement => "select library_book_id, book_id, title, library_id from books join library_books lb using (book_id);"
   }
 }
 filter {
   mutate {
-    copy => { "library_id" => "[@metadata][_id]"}
-    copy => {"name" => "qname"}
+    copy => { "library_book_id" => "[@metadata][_id]"}
   }
 }
 output {
   elasticsearch {
       hosts => ["http://es:9200"]
-      index => "libraries"
+      index => "library_books"
     manage_template => true
-    template_name  => libraries_template
-      template =>"/usr/share/logstash/template/libraries_template.json"
+    template_name  => library_books_template
+      template =>"/usr/share/logstash/template/library_books_template.json"
   }
   stdout {
 	  codec => rubydebug
