logstash tracking data
이제 database의 데이터가 변경되어도 elk에서 추적합니다.

--- a/docker/logstash/pipeline/books.conf
+++ b/docker/logstash/pipeline/books.conf
@@ -8,7 +8,11 @@ input {
     jdbc_connection_string => "jdbc:mariadb://db:3306/proxbook"
     jdbc_user => "admin"
     jdbc_password =>"admin"
-    statement => "SELECT * FROM books"
+    statement => "SELECT * FROM books WHERE updated_at > :sql_last_value"
+    schedule => "0 * * * *"
+    use_column_value => true
+    tracking_column => "updated_at"
+    tracking_column_type => "timestamp"
   }
 }
 filter {
@@ -18,11 +22,13 @@ filter {
 }
 output {
   elasticsearch {
-      hosts => ["http://es:9200"]
-      index => "books"
-      manage_template => true
-      template_name  => books_template
-      template =>"/usr/share/logstash/template/books_template.json"
+    hosts => ["http://es:9200"]
+    index => "books"
+    document_id => "%{book_id}"
+    doc_as_upsert => true
+    manage_template => true
+    template_name  => books_template
+    template =>"/usr/share/logstash/template/books_template.json"
   }
   stdout {
 	  codec => rubydebug
