--- a/docker/logstash/pipeline/libraries.conf
+++ b/docker/logstash/pipeline/libraries.conf
@@ -8,22 +8,27 @@ input {
     jdbc_connection_string => "jdbc:mariadb://db:3306/proxbook"
     jdbc_user => "admin"
     jdbc_password =>"admin"
-    statement => "SELECT * FROM libraries"
+    statement => "SELECT * FROM libraries WHERE updated_at > :sql_last_value"
+    schedule => "0 * * * *"
+    use_column_value => true
+    tracking_column => "updated_at"
+    tracking_column_type => "timestamp"
   }
 }
 filter {
   mutate {
     copy => { "library_id" => "[@metadata][_id]"}
-    copy => {"name" => "qname"}
   }
 }
 output {
   elasticsearch {
-      hosts => ["http://es:9200"]
-      index => "libraries"
+    hosts => ["http://es:9200"]
+    index => "libraries"
+    document_id => "%{library_id}"
+    doc_as_upsert => true
     manage_template => true
     template_name  => libraries_template
-      template =>"/usr/share/logstash/template/libraries_template.json"
+    template =>"/usr/share/logstash/template/libraries_template.json"
   }
   stdout {
 	  codec => rubydebug
