--- a/docker/logstash/pipeline/library_books.conf
+++ b/docker/logstash/pipeline/library_books.conf
@@ -8,7 +8,11 @@ input {
     jdbc_connection_string => "jdbc:mariadb://db:3306/proxbook"
     jdbc_user => "admin"
     jdbc_password =>"admin"
-    statement => "select library_book_id, book_id, title, library_id from books join library_books lb using (book_id);"
+    statement => "select lb.library_book_id as library_book_id, book_id, title, library_id, lb.updated_at as updated_at from library_books lb join books using (book_id) WHERE lb.updated_at > :sql_last_value"
+    schedule => "0 * * * *"
+    use_column_value => true
+    tracking_column => "updated_at"
+    tracking_column_type => "timestamp"
   }
 }
 filter {
@@ -18,11 +22,13 @@ filter {
 }
 output {
   elasticsearch {
-      hosts => ["http://es:9200"]
-      index => "library_books"
+    hosts => ["http://es:9200"]
+    index => "library_books"
+    document_id => "%{library_book_id}"
+    doc_as_upsert => true
     manage_template => true
     template_name  => library_books_template
-      template =>"/usr/share/logstash/template/library_books_template.json"
+    template =>"/usr/share/logstash/template/library_books_template.json"
   }
   stdout {
 	  codec => rubydebug
