--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,8 +31,15 @@ kakao:
   api:
     key: ${KAKAO_REST_API_KEY}
 
+
 logging:
   level:
     org.hibernate.SQL: DEBUG
     com.proxbook.finder : DEBUG
     web: DEBUG
+
+springdoc:
+  api-docs:
+    path: /api/docs
+  swagger-ui:
+    path: /api/docs/ui
