[fix] library search api

--- a/docker/logstash/pipeline/libraries.conf
+++ b/docker/logstash/pipeline/libraries.conf
@@ -9,7 +9,7 @@ input {
     jdbc_user => "admin"
     jdbc_password =>"admin"
     statement => "SELECT * FROM libraries WHERE updated_at > :sql_last_value"
-    schedule => "0 * * * *"
+    schedule => "*/10 * * * *"
     use_column_value => true
     tracking_column => "updated_at"
     tracking_column_type => "timestamp"
