--- a/docker/logstash/pipeline/library_books.conf
+++ b/docker/logstash/pipeline/library_books.conf
@@ -9,7 +9,7 @@ input {
     jdbc_user => "admin"
     jdbc_password =>"admin"
     statement => "select lb.library_book_id as library_book_id, book_id, title, library_id, lb.updated_at as updated_at from library_books lb join books using (book_id) WHERE lb.updated_at > :sql_last_value"
-    schedule => "0 * * * *"
+    schedule => "*/10 * * * *"
     use_column_value => true
     tracking_column => "updated_at"
     tracking_column_type => "timestamp"
