--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.2.5'
-	id 'io.spring.dependency-management' version '1.1.4'
-	id 'org.springdoc.openapi-gradle-plugin' version "1.9.0"
+	id 'org.springframework.boot' version '3.3.3'
+	id 'io.spring.dependency-management' version '1.1.6'
 
 }
 
@@ -10,7 +9,9 @@ group = 'com.proxbook'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(22)
+	}
 }
 
 configurations {
@@ -28,12 +29,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.hibernate:hibernate-validator:8.0.1.Final'
+
+	// opensearch
+	implementation 'org.opensearch.client:spring-data-opensearch:1.5.1'
 
 	// open-api spec
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
