--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,15 +18,6 @@ spring:
           order_updates: true
     open-in-view: false
 
-  data:
-    elasticsearch:
-      repositories:
-        enabled: true
-
-  elasticsearch:
-    rest:
-      uris: ${ES_URL}
-
 kakao:
   api:
     key: ${KAKAO_REST_API_KEY}
@@ -43,3 +34,8 @@ springdoc:
     path: /api/docs
   swagger-ui:
     path: /api/docs/ui
+
+opensearch:
+  host : ${OPENSEARCH_HOST}
+  port : ${OPENSEARCH_PORT}
+
